WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205028
[WK2][iOS] Visibility propagation view is not properly updated when navigating cross-process
https://bugs.webkit.org/show_bug.cgi?id=205028
Summary
[WK2][iOS] Visibility propagation view is not properly updated when navigatin...
Chris Dumez
Reported
2019-12-09 14:49:12 PST
Visibility propagation view is not properly updated when navigating cross-process on iOS WK2.
Attachments
Patch
(14.58 KB, patch)
2019-12-09 15:50 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(14.67 KB, patch)
2019-12-09 16:00 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-12-09 15:50:19 PST
Created
attachment 385193
[details]
Patch
Chris Dumez
Comment 2
2019-12-09 16:00:15 PST
Created
attachment 385198
[details]
Patch
Tim Horton
Comment 3
2019-12-10 11:47:22 PST
Comment on
attachment 385198
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=385198&action=review
> Source/WebKit/UIProcess/SuspendedPageProxy.h:50 > +using LayerHostingContextID = uint32_t;
Odd that we have this in so many places
Chris Dumez
Comment 4
2019-12-10 12:04:16 PST
Comment on
attachment 385198
[details]
Patch Clearing flags on attachment: 385198 Committed
r253337
: <
https://trac.webkit.org/changeset/253337
>
Chris Dumez
Comment 5
2019-12-10 12:04:18 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2019-12-10 12:06:21 PST
<
rdar://problem/57803133
>
Truitt Savell
Comment 7
2019-12-10 15:41:36 PST
It looks like the changes in
https://trac.webkit.org/changeset/253337/webkit
caused testing to exit early on Mac Debug wk2 Build:
https://build.webkit.org/builders/Apple%20Mojave%20Debug%20WK2%20%28Tests%29/builds/6312
I was able to reproduce this on 253337 but not 253336 by just running the http/tests/ directory.
Chris Dumez
Comment 8
2019-12-10 15:59:53 PST
(In reply to Truitt Savell from
comment #7
)
> It looks like the changes in
https://trac.webkit.org/changeset/253337/webkit
> > caused testing to exit early on Mac Debug wk2 > > Build: >
https://build.webkit.org/builders/Apple%20Mojave%20Debug%20WK2%20%28Tests%29/
> builds/6312 > > I was able to reproduce this on 253337 but not 253336 by just running the > http/tests/ directory.
Follow-up in <
https://trac.webkit.org/changeset/253354
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug