[WK2][iOS] Visibility propagation view is not properly updated when navigating cross-process https://bugs.webkit.org/show_bug.cgi?id=205028

Reviewed by Tim Horton.

Make sure we keep the contextIDForVisibilityPropagation on the ProvisionalPageProxy / SuspendedPageProxy
objects and update WebPageProxy::m_contextIDForVisibilityPropagation whenever we commit a provisional
page. Also update ProvisionalPageProxy to listen for the WebPageProxy::DidCreateContextForVisibilityPropagation
IPC so that it can update m_contextIDForVisibilityPropagation once the WebPage is created in the
provisional WebProcess (which creates the visibility propagation view).

* UIProcess/ProvisionalPageProxy.cpp:
(WebKit::ProvisionalPageProxy::ProvisionalPageProxy):
(WebKit::ProvisionalPageProxy::didCreateContextForVisibilityPropagation):
(WebKit::ProvisionalPageProxy::didReceiveMessage):
* UIProcess/ProvisionalPageProxy.h:
(WebKit::ProvisionalPageProxy::contextIDForVisibilityPropagation const):
* UIProcess/SuspendedPageProxy.cpp:
(WebKit::SuspendedPageProxy::SuspendedPageProxy):
* UIProcess/SuspendedPageProxy.h:
* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::swapToProvisionalPage):
(WebKit::WebPageProxy::commitProvisionalPage):
(WebKit::WebPageProxy::resetState):
(WebKit::WebPageProxy::swapToWebProcess): Deleted.
* UIProcess/WebPageProxy.h:
* UIProcess/ios/WKContentView.mm:
(-[WKContentView _setupVisibilityPropagationView]):
(-[WKContentView _removeVisibilityPropagationView]):

Canonical link: https://commits.webkit.org/218280@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253337 268f45cc-cd09-0410-ab3c-d52691b4dbfc